[gd_scene load_steps=6 format=3 uid="uid://d34armexgp1kf"]

[ext_resource type="Texture2D" uid="uid://u5ntth5kfibm" path="res://assets/images/crosshair.png" id="1_nbnma"]
[ext_resource type="Script" path="res://ui/first_person_ui/first_person_ui.gd" id="1_qefni"]

[sub_resource type="LabelSettings" id="LabelSettings_wau08"]
font_size = 22
outline_size = 5
outline_color = Color(0.0117647, 0, 0.0941176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csnjv"]
bg_color = Color(0.792157, 0.247059, 0.12549, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtr3d"]
bg_color = Color(0.329412, 0.54902, 0.14902, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="FirstPersonUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_qefni")

[node name="Target" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("1_nbnma")
ignore_texture_size = true

[node name="InteractHint" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -27.0
label_settings = SubResource("LabelSettings_wau08")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PickHint" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 51.0219
label_settings = SubResource("LabelSettings_wau08")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetName" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 38.0
offset_top = -15.5
offset_right = 78.0005
offset_bottom = 15.5
label_settings = SubResource("LabelSettings_wau08")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="MarginContainer"]
modulate = Color(1, 1, 1, 0.784314)
custom_minimum_size = Vector2(150, 50)
offset_left = 16.0
offset_top = 534.0
offset_right = 166.0
offset_bottom = 584.0
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(150, 50)
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Panel/VBoxContainer"]
offset_right = 150.0
offset_bottom = 23.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
theme_override_styles/fg = SubResource("StyleBoxFlat_csnjv")
value = 50.0
percent_visible = false

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/Panel/VBoxContainer"]
offset_top = 27.0
offset_right = 150.0
offset_bottom = 50.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
theme_override_styles/fg = SubResource("StyleBoxFlat_gtr3d")
value = 55.0
percent_visible = false
